--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,41 @@
-# Ignore everything by default
-*
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# Allow guardian folder
-!guardian/
-!guardian/**
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+venv/
+ENV/
+env/
+build/
+dist/
+*.egg-info/
 
-# Allow persona_router.py explicitly
-!persona_router.py
+# Node.js
+node_modules/
+.next/
+out/
+build/
+dist/
+.pnpm-debug.log*
 
-# Allow .gitignore itself
-!.gitignore
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor/System
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+*.swp
+
+# ADK specifics
+.adk/
+**/__pycache__/
